--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch":"sass --watch assets/sass:assets/css --style nested",
-    "build":"sass assets/sass:assets/css --style compressed"
+    "watch": "sass --watch assets/sass:assets/css",
+    "build": "sass assets/sass:assets/css --style compressed"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/astranomaly/astranomaly.github.io#readme",
   "devDependencies": {
     "sass": "^1.17.2"
+  },
+  "dependencies": {
+    "jquery-colorbox": "^1.6.4"
   }
 }
